<resources>
    <string name="app_name">EnvApp</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="simulation_intensity">Simulation Intensity</string>
    <string name="start_simulation">Start Simulation</string>
    <string name="default_percentage">0%</string>
    <string name="default_intensity">50%</string>
    <string name="percentage_format">%d%%</string>
    <string name="update">Update</string>
    <string name="status_idle">Idle</string>
    <string name="cpu_intensity">CPU Intensity</string>
    <string name="ram_intensity">RAM Intensity</string>
    <string name="info_icon_description">App Information</string>
    <string name="running_processes">Running Processes:</string>
    <string name="running_processes_format">%d</string>
    <string name="available_ram">Available RAM:</string>
    <string name="total_ram">Total RAM:</string>
    <string name="memory_format">%d MB</string>
</resources>